# trado

./: .env.example  .gitignore  README.md  build.bat  installer.iss  launcher.py  main.py  pyproject.toml  requirements.txt  trado.spec
.claude/: settings.local.json
analysis/aggregator/: signal_fusion.py
analysis/corrective/: pop_filter.py
analysis/regime/: detector.py
analysis/sentiment/: context_builder.py  finbert_analyzer.py  grok_analyzer.py  macro_filter.py
analysis/technical/: __init__.py  ifc.py  indicators.py  ote.py  price_action.py  smc.py
backtest/: engine.py  metrics.py  stress_test.py  wfo.py
config/: settings.py
core/: __init__.py  engine.py
data/collectors/: economic_calendar.py  grok.py  mt5_collector.py  news_feed.py  ohlcv.py  onchain.py  orderbook.py
data/pipeline/: cache.py  features.py  normalizer.py  trade_journal.py
models/: base.py  ensemble.py  meta_labeling.py
models/lstm/: architecture.py  trainer.py
models/rl_agent/: environment.py  trainer.py
models/tft/: architecture.py  trainer.py
models/xgboost/: classifier.py
monitoring/: alerts.py  bot_manager.py  dashboard.py  logger.py
monitoring/pages/: configuration.py
scripts/: make_icon.py  make_requirements.py
tests/integration/: test_pipeline.py
tests/unit/: test_advanced_strategy.py  test_batch5.py  test_indicators.py  test_macro_filter.py  test_risk.py  test_strategies.py
trading/executor/: alpaca.py  base.py  binance.py  mt5.py
trading/risk/: circuit_breaker.py  manager.py  sizing.py
trading/strategies/: advanced_strategy.py  ai_strategy.py  base.py  ema_rsi.py
training/: pipeline.py
