[project]
name = "trado"
version = "0.1.0"
description = "TRADO — Bot de trading IA (Binance + Alpaca)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

dependencies = [
    # --- Data & brokers ---
    "ccxt>=4.3.0",
    "alpaca-trade-api>=3.2.0",
    "MetaTrader5>=5.0.45",
    "aiohttp>=3.9.0",
    "redis>=5.0.0",
    "aiosqlite>=0.20.0",

    # --- Analysis ---
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b0",
    "scipy>=1.12.0",

    # --- AI / ML ---
    "torch>=2.2.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.4.0",
    "stable-baselines3>=2.3.0",
    "gymnasium>=0.29.0",
    "optuna>=3.6.0",

    # --- Config ---
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # --- Backtest ---
    "vectorbt>=0.26.0",

    # --- Monitoring ---
    "streamlit>=1.35.0",
    "python-telegram-bot>=21.3",
    "loguru>=0.7.2",
    "plotly>=5.22.0",

    # --- Process management (BotManager + launcher) ---
    "psutil>=5.9.0",
]

[project.optional-dependencies]
finbert = [
    "transformers>=4.40.0",
    "sentencepiece>=0.2.0",
]
dist = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
]

[project.scripts]
trado-run       = "trado.main:cli_run"
trado-backtest  = "trado.main:cli_backtest"
trado-dashboard = "trado.main:cli_dashboard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trado"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
